--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <title>Telegram Mini App</title>
+    <title>Мини-приложение Telegram</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Для запуска этого приложения вам необходимо включить JavaScript.</noscript>
     <div id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
   </body>
